# the-dark-closet

./: .gitignore  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  run_checks.sh
.github/workflows/: docker-validation.yml  pr-validation.yml  publish-screenshots.yml
config/: dark_weirdo.json
docs/: assets.html  character_showcase.html  index.html  tests.html
levels/: example_level.json  test_brick_breaking.json  test_brick_room.json  test_platform_room.json  test_simple_room.json  visual_test_platform.json  visual_test_simple.json
scripts/: build_assets.py  calibrate_movement.py  debug_advance_frame.py  debug_center_mass.py  debug_rendering.py  generate_docs.py  generate_sprites.js  run_action_tests.py  run_all_tests.py  run_pytest_simple.py  run_pytest_tests.py  test_controlled_time.py  test_utils.py
src/the_dark_closet/: __main__.py  assets.py  character.py  game.py  json_scene.py  level_loader.py  rendering_utils.py
tests/: conftest.py
tests/integration/: test_comprehensive_scenarios.py
tests/performance/: test_performance.py
tests/unit/: test_basic_functionality.py  test_brick_breaking_callbacks.py  test_character_walk_cycle.py  test_json_basic_functionality.py  test_json_level_placement.py  test_procedural_assets.py  test_sprite_layout.py
tests/visual/: test_character_rendering_fixes.py  test_character_rendering_issues.py  test_character_rendering_quality.py  test_character_showcase.py  test_character_walk_cycle_sequence.py  test_debug_rendering.py  test_hud_direct.py  test_hud_rendering.py  test_simple_hud.py  test_visual_regression.py
